 * It was possible to return non-printable characters from an SQL database,
   which could cause undefined weirdness. Reported by spork. [MG]
 * Many things which listed attributes from a parent, like lattrp() or
   examine/parent, didn't respect no_inherit fully. [MG]
 * Minor crashbug in @boot fixed. Reported by thomaswdyoung. [MG]

Minor changes:
 * strreplace() now works harder to keep existing ANSI intact, when you
   replace an un-ansi'd string into an ansi'd one. [MG]
 * colors(...,xterm256) can now return colors 0 to 15, to avoid confusion
   when converting xterm -> hex -> xterm. Reported by Trinsec. [MG]
 * New substitution, %k, returns the enactor's monikered name. [MUX] [MG]
 * Help fixes and tweaks. [MG]
 * PennMUSH can now read MUX-style passwords, to make moving dbs from MUX
   to Penn less painful. Requested by Muse. [MG]
 * Commands are no longer queued for HALTed non-players. (Since they'd be
   dropped from the queue anyway, rather than being run, it saves us jumping
   through a series of hoops for no good reason.) From a report by Muse and
   Ashen-Shugar. [MG]
   
Functions:
 * delete(), replace() and insert() have been renamed to strdelete(), 
   lreplace() and linsert(), respectively, for clarity and conformity. The
   original names remain as aliases. [MG]
 * moniker(<object>) returns an objects monikered name. [MUX] [MG]
 * mapsql() only stored 10 columns, instead of the advertised 30. Reported
   by Mercutio. [MG]
 * fn() now takes an <obj>/ prefix to its first arg, to evaluate the built-in
   function as <obj>. Useful when overriding side-effect functions. [MG]
 * r() now takes two arguments, allowing it to return the stack (%0-%9),
   itext() and stext() values, as well as q-registers(). [MG]

Version 1.8.5 patchlevel 4                                 Mar 17, 2013

Major changes:
 * The player_name_len @config option is now the maximum length of a player
   name, instead of the maximum length+1, because doing it that way was