@@ -37,6 +37,7 @@ Fixes:
  * Many things which listed attributes from a parent, like lattrp() or
    examine/parent, didn't respect no_inherit fully. [MG]
  * Minor crashbug in @boot fixed. Reported by thomaswdyoung. [MG]
+ * @grep now ignores ansi when looking for a value. Suggested by Mouvar. [MG]
 
 Minor changes:
  * strreplace() now works harder to keep existing ANSI intact, when you
